--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 body {
 	font-family: Arial;
 	user-select: none;
+	-webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 	overflow: hidden;
 	background: #7F7FD5;
 	background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
